fix visual bugs when screen is too short

--- a/epics-team-builder/src/sass/widgets/team-builder-page.scss
+++ b/epics-team-builder/src/sass/widgets/team-builder-page.scss
@@ -1,22 +1,8 @@
 .team-builder-page {
   height: 100vh;
-  overflow-x: hidden;
-
-  .header-container {
-    height: 10vh;
-    .header {
-      height: 40%;
-      background-color: #124734;
-      display: flex;
-      img {
-        align-self: center;
-        height: 80%;
-      }
-    }
-  }
 
   .team-builder-header-options {
-    height: 10vh;
+    height: 6rem;
     padding-top: 0;
     padding-bottom: 0;
 
